deployments/k8-deploy.yaml
---
apiVersion: "v1"
kind: "Service"
metadata:
  annotations: {}
  labels:
    app: "time-checker"
  name: "time-checker-svc"
spec:
  ports:
    - name: "http-time-checker-svc"
      port: 8080
      protocol: "TCP"
      targetPort: 8080
      nodePort: 31000
  selector:
    app: "time-checker"
  type: "NodePort"
---
apiVersion: "extensions/v1beta1"
kind: "Ingress"
metadata:
  annotations:
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    kubernetes.io/ingress.class: "nginx"
  labels:
    app: "time-checker"
  name: "time-checker-ingress"
spec:
  rules:
    - host: "abc.com"
      http:
        paths:
          - backend:
              serviceName: "time-checker-svc"
              servicePort: 8080
            path: "/"
  tls:
    - hosts:
        - "abc.com"
---
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  annotations: {}
  labels:
    app: "time-checker"
  name: "time-checker-deployment"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "time-checker"
  template:
    metadata:
      annotations: {}
      labels:
        app: "time-checker"
    spec:
      containers:
        - image: "time-checker:1.0.0-SNAPSHOT"
          imagePullPolicy: "IfNotPresent"
          livenessProbe:
            initialDelaySeconds: 10
            periodSeconds: 5
            httpGet:
              path: /actuator/health
              port: 8080
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
          name: "time-checker-deployment"
          ports:
            - containerPort: 8080
              protocol: "TCP"
      nodeSelector: {}
